--- a/public/inbjudan.html
+++ b/public/inbjudan.html
@@ -255,7 +255,7 @@
                     <div class="venue embossed-text">
                         Kära ni,<br>Det är med glädje och kärlek vi bjuder in er att närvara vid vår vigsel och bröllopsfest.<br>Denna dag markerar början på vårt gemensamma liv och vi skulle bli hedrade att få dela den med er.<br>Vänligen OSA senast 30 april 2026 via <a href="https://inesharis.se" style="color: #c0c0c0; text-decoration: underline;">inesharis.se</a>
                         <div class="divider"></div>
-                        Dragi naši,<br>Sa radošću i ljubavi pozivamo vas da prisustvujete našem vjenčanju i svadbenom slavlju.<br>Početak našeg života označavaju ovog dana i bila bi nam čast da ga podelimo upravo s vama.<br>Molimo vas da potvrdite dolazak najkasnije do 30. aprila 2026. putem <a href="https://inesharis.se" style="color: #c0c0c0; text-decoration: underline;">inesharis.se</a>
+                        Dragi naši,<br>Sa radošću i ljubavlju pozivamo vas da prisustvujete našem vjenčanju i svadbenom slavlju.<br>Početak našeg zajedničkog života označavamo ovog dana i bila bi nam čast da ga podijelimo upravo s vama.<br>Molimo vas da potvrdite dolazak najkasnije do 30. aprila 2026. putem <a href="https://inesharis.se" style="color: #c0c0c0; text-decoration: underline;">inesharis.se</a>
                         <div class="divider"></div>
                     </div>
                     
